# projectBooth

./: .env  10-photobooth.rules  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
assets/inside/: countdown.webm  index.html
docs/: _config.yml  index.md
src/: config.rs  input.rs  main.rs
src/broker/: broker.rs  broker_message.rs
src/config/: loadconfig.rs  var.rs
src/input/: buzz.rs
src/photo/: camera.rs
