[package]
name = "project_booth"
version = "0.1.0"
authors = ["sven"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
warp = "0.3.3"
evdev-rs = "0.3.1"
gphoto = "0.1.2"

[[bin]]
name = "project_booth"
path = "src/main.rs"
